--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "postcss": "^8.4.4",
     "tailwind-scrollbar": "^1.3.1"
   }
