add page remember matching game

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "postcss": "^8.4.4",
