--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@csstools/postcss-sass": "^5.0.1",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "postcss": "^8.4.4",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "tailwind-scrollbar": "^1.3.1"
   }
 }
