--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hammerjs": "^2.0.8",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-fortune-wheel": "^1.0.3",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
