add touch events to racing car

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-fortune-wheel": "^1.0.3",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue2-touch-events": "^3.2.2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
